--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Assignment 3: Backend",
   "main": "server.js",
   "scripts": {
-    "test": "jest --coverage",
+    "test": "jest --watchAll --verbose --coverage",
     "start": "node server.js",
     "dev": "nodemon server"
   },
@@ -32,7 +32,7 @@
   },
   "devDependencies": {
     "jest": "^29.5.0",
-    "nodemon": "^2.0.21",
+    "nodemon": "^2.0.22",
     "supertest": "^6.3.3"
   }
 }
