--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "cors": "^2.8.5",
     "date-fns": "^2.29.3",
     "dotenv": "^16.0.3",
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
+    "express-ejs-layouts": "^2.5.1",
     "mongoose": "^7.0.2",
     "uuid": "^9.0.0"
   },
